feat: add API client generator and remove JSpecify
Related to JSpecify, an exception is generated in the dispatcher during hot reload. I think this could be a misconfiguration in a multi-module Java project. Maybe it will be reintegrated.